packages/lexical-playground/src/index.css
/* ... */
.github-corner:hover .octo-arm {
  animation: octocat-wave 560ms ease-in-out;
}

@keyframes octocat-wave {
  0%,
  100% {
    transform: rotate(0);
  }

  20%,
  60% {
    transform: rotate(-25deg);
  }

  40%,
  80% {
    transform: rotate(10deg);
  }
}

@media (max-width: 500px) {
  .github-corner:hover .octo-arm {
    animation: none;
  }

  .github-corner .octo-arm {
    animation: octocat-wave 560ms ease-in-out;
  }
}

.spacer {
  letter-spacing: -2px;
}

.editor-equation {
  cursor: default;
  user-select: none;
}

span.editor-equation {
  display: inline-block;
}

.editor-equation.focused {
  outline: 2px solid rgb(60, 132, 244);
}

button.item i {
  opacity: 0.6;
}

button.item.dropdown-item-active {
  background-color: rgba(223, 232, 250, 0.3);
}

button.item.dropdown-item-active i {
  opacity: 1;
}

.dialog-dropdown {
  background-color: #eee !important;
  margin-bottom: 10px;
  width: 100%;
}

.toolbar .block-controls {
  display: flex;
  align-items: center;
}

.toolbar .block-controls .dropdown-button-text {
  width: 7em;
  text-align: left;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: inline-block;
}

@media (prefers-reduced-motion: reduce) {
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

@media (forced-colors: active) {
  .toolbar {
    border-bottom: 1px solid CanvasText;
  }
  .toolbar .toolbar-item {
    border: 1px solid CanvasText;
  }
  .toolbar .toolbar-item:focus,
  .toolbar .toolbar-item:focus-visible {
    outline: 2px solid Highlight;
    outline-offset: 2px;
  }
  .toolbar .toolbar-item.active {
    background-color: Highlight;
    color: HighlightText;
  }
  button.toolbar-item:not(:disabled) i.format {
    opacity: 1;
  }
  .toolbar .divider {
    background-color: CanvasText;
    forced-color-adjust: none;
  }
  .Modal__overlay {
    background-color: Canvas;
  }
  .Modal__modal {
    border: 1px solid CanvasText;
  }
  .editor-shell .editor-container .ContentEditable__root {
    border: 1px solid CanvasText;
  }
  header .logo {
    background-image: none;
    background-color: CanvasText;
    -webkit-mask-image: url(images/logo.svg);
    mask-image: url(images/logo.svg);
    -webkit-mask-size: contain;
    mask-size: contain;
    -webkit-mask-repeat: no-repeat;
    mask-repeat: no-repeat;
    -webkit-mask-position: center;
    mask-position: center;
  }
}

